2004-08-28  Chris Taylor  <c.taylor@student.curtin.edu.au>
	    and Martin Schaffner  <maschaffner@gmx.ch>

	* 2d/2dsline.c, 2d/bitblt.c, 2d/bitmap.c, 2d/clip.h, 2d/ibitblt.c
	2d/linear.asm, 2d/palette.c, 2d/pcx.c, 2d/rle.c, 2d/scale.c
	2d/scalea.asm, 3d/clipper.h, 3d/globvars.c, 3d/globvars.h
	3d/instance.c, 3d/interp.c, 3d/matrix.c, 3d/points.c, 3d/rod.c
	3d/setup.c, ChangeLog, arch/dos/bak/ipx.c, arch/dos/ipx.c
	arch/dos/ipx.h, arch/dos/joyc.c, arch/dos/joydefs.c, arch/dos/key.c
	arch/dos/mono.c, arch/dos/mono.h, arch/dos/mouse.c
	arch/include/joy.h, arch/win32/include/key.h
	arch/win32/include/mouse.h, arch/win32/mouse.c, cfile/cfile.c
	iff/iff.c, include/3d.h, include/args.h, include/byteswap.h
	include/cfile.h, include/error.h, include/gr.h, include/grdef.h
	include/ibitblt.h, include/iff.h, include/ipx.h, include/palette.h
	include/pcx.h, include/pstypes.h, include/rle.h, include/texmap.h
	include/timer.h, include/u_dpmi.h, include/vecmat.h, main/ai.c
	main/ai.h, main/ai2.c, main/aipath.c, main/aistruct.h, main/automap.c
	main/automap.h, main/bm.c, main/bm.h, main/bmread.c, main/cntrlcen.c
	main/cntrlcen.h, main/collide.c, main/collide.h, main/compbit.h
	main/config.c, main/config.h, main/controls.c, main/controls.h
	main/credits.c, main/credits.h, main/desc_id.h, main/digi.h
	main/dumpmine.c, main/editor/medwall.h, main/editor/seguvs.h
	main/effects.c, main/effects.h, main/endlevel.c, main/endlevel.h
	main/escort.c, main/fireball.c, main/fireball.h, main/fuelcen.c
	main/fuelcen.h, main/fvi.c, main/fvi.h, main/game.c, main/game.h
	main/gamefont.c, main/gamefont.h, main/gamemine.c, main/gamemine.h
	main/gamesave.c, main/gamesave.h, main/gameseg.c, main/gameseg.h
	main/gameseq.c, main/gameseq.h, main/gauges.c, main/gauges.h
	main/hostage.c, main/hostage.h, main/hud.c, main/inferno.c
	main/joydefs.c, main/joydefs.h, main/kconfig.c, main/kconfig.h
	main/kmatrix.c, main/kmatrix.h, main/laser.c, main/laser.h