@@ -1053,6 +1053,9 @@ arch/dos/ipx.c:
 arch/dos/ipx.h:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -1141,6 +1144,9 @@ arch/dos/ipx.h:
 arch/dos/joy.c:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -1295,6 +1301,9 @@ arch/dos/joy.c:
 arch/dos/joydefs.c:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -1559,6 +1568,9 @@ arch/dos/joydefs.c:
 arch/dos/key.c:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -1694,6 +1706,9 @@ arch/dos/key.c:
 arch/dos/mono.c:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -2917,6 +2932,9 @@ include/rle.h:
 include/texmap.h:
 
  * $Log: not supported by cvs2svn $
+ * Revision 1.2  2004/08/28 23:37:35  schaffner
+ * move old per-file change logs into new file ChangeLog-old
+ *
  * Revision 1.1  2004/08/28 23:17:45  schaffner
  * move old per-file change logs into new file ChangeLog-old
  *
@@ -5530,6 +5548,144 @@ main/dumpmine.c:
  * Initial revision
 
 ------------------------------------------------------------------------
+main/editor/med.c:
+
+ * Revision 2.3  1995/03/06  18:23:52  john
+ * Fixed bug with font screwing up.
+ * 
+ * Revision 2.2  1995/03/06  16:34:55  john
+ * Fixed bug with previous.
+ * 
+ * Revision 2.1  1995/03/06  15:20:57  john
+ * New screen mode method.
+ * 
+ * Revision 2.0  1995/02/27  11:35:54  john
+ * Version 2.0! No anonymous unions, Watcom 10.0, with no need
+ * for bitmaps.tbl.
+ * 
+ * Revision 1.192  1994/11/30  12:33:55  mike
+ * set window clearing mode for editor.
+ * 
+ * Revision 1.191  1994/11/27  23:17:02  matt
+ * Made changes for new mprintf calling convention
+ * 
+ * Revision 1.190  1994/11/19  00:04:33  john
+ * Changed some shorts to ints.
+ * 
+ * Revision 1.189  1994/11/17  14:47:57  mike
+ * validation functions moved from editor to game.
+ * 
+ * Revision 1.188  1994/11/14  11:41:38  john
+ * Fixed bug with editor/game sequencing.
+ * 
+ * Revision 1.187  1994/11/13  15:36:44  john
+ * Changed game sequencing with editor.
+ * 
+ * Revision 1.186  1994/11/10  16:49:12  matt
+ * Don't sort seg list if no segs in list
+ * 
+ * Revision 1.185  1994/11/08  09:28:39  mike
+ * reset ai paths on going to game.
+ * 
+ * Revision 1.184  1994/10/30  14:13:05  mike
+ * rip out repair center stuff.
+ * 
+ * Revision 1.183  1994/10/27  10:07:06  mike
+ * adapt to no inverse table.
+ * 
+ * Revision 1.182  1994/10/20  12:48:03  matt
+ * Replaced old save files (MIN/SAV/HOT) with new LVL files
+ * 
+ * Revision 1.181  1994/10/13  11:39:22  john
+ * Took out network stuff/.
+ * 
+ * Revision 1.180  1994/10/07  22:21:38  mike
+ * Stop Delete-{whatever} from hanging you!
+ * 
+ * Revision 1.179  1994/10/03  23:39:37  mike
+ * Adapt to newer, better, fuelcen_activate function.
+ * 
+ * Revision 1.178  1994/09/30  00:38:05  mike
+ * Shorten diagnostic message erase -- was erasing outside canvas.
+ * 
+ * Revision 1.177  1994/09/28  17:31:37  mike
+ * Add call to check_wall_validity();
+ * 
+ * Revision 1.176  1994/08/19  10:57:42  mike
+ * Fix status message erase bug.
+ * 
+ * Revision 1.175  1994/08/18  10:48:12  john
+ * Cleaned up game sequencing.
+ * 
+ * Revision 1.174  1994/08/16  18:11:04  yuan
+ * Maded C place you in the center of a segment.
+ * 
+ * Revision 1.173  1994/08/10  19:55:05  john
+ * Changed font stuff.
+ * 
+ * Revision 1.172  1994/08/09  16:06:06  john
+ * Added the ability to place players.  Made old
+ * Player variable be ConsoleObject.
+ * 
+ * Revision 1.171  1994/08/04  09:14:11  matt
+ * Fixed problem I said I fixed last time
+ * 
+ * Revision 1.170  1994/08/04  00:27:57  matt
+ * When viewing a wall, update the objects segnum if moved out of the segment
+ * 
+ * Revision 1.169  1994/08/02  14:18:12  mike
+ * Clean up dialog boxes.
+ * 
+ * Revision 1.168  1994/07/29  15:34:35  mike
+ * Kill some mprintfs.
+ * 
+ * Revision 1.167  1994/07/29  14:56:46  yuan
+ * Close centers window, when you go into game.
+ * 
+ * Revision 1.166  1994/07/28  17:16:20  john
+ * MAde editor use Network stuff.
+ * 
+ * Revision 1.165  1994/07/28  16:59:10  mike
+ * objects containing objects.
+ * 
+ * Revision 1.164  1994/07/22  12:37:07  matt
+ * Cleaned up editor/game interactions some more.
+ * 
+ * Revision 1.163  1994/07/21  19:35:11  yuan
+ * Fixed #include problem
+ * 
+ * Revision 1.162  1994/07/21  18:02:09  matt
+ * Don't re-init player stats when going from editor -> game
+ * 
+ * Revision 1.161  1994/07/21  12:47:53  mike
+ * Add tilde key functionality for object movement.
+ * 
+ * Revision 1.160  1994/07/18  10:44:55  mike
+ * One-click access to keypads.
+ * 
+ * Revision 1.159  1994/07/01  18:05:54  john
+ * *** empty log message ***
+ * 
+ * Revision 1.158  1994/07/01  17:57:06  john
+ * First version of not-working hostage system
+ * 
+ * 
+ * Revision 1.157  1994/07/01  11:32:29  john
+ * *** empty log message ***
+ * 
+ * Revision 1.156  1994/06/24  17:04:36  john
+ * *** empty log message ***
+ * 
+ * Revision 1.155  1994/06/23  15:53:47  matt
+ * Finished hacking in 3d rendering in big window
+ * 
+ * Revision 1.154  1994/06/21  16:17:54  yuan
+ * Init stats when you go to game from editor
+ * 
+ * Revision 1.153  1994/06/21  12:57:14  yuan
+ * Remove center from segment function added to menu.
+
+------------------------------------------------------------------------
 main/editor/medwall.h:
 
  * Revision 2.0  1995/02/27  11:35:10  john
@@ -5563,6 +5719,129 @@ main/editor/medwall.h:
  * 
  * Revision 1.1  1994/02/10  17:52:01  matt
  * Initial revision
+
+------------------------------------------------------------------------
+main/editor/segment.c:
+
+ * Revision 2.0  1995/02/27  11:35:21  john
+ * Version 2.0! No anonymous unions, Watcom 10.0, with no need
+ * for bitmaps.tbl.
+ * 
+ * Revision 1.191  1995/02/22  15:28:30  allender
+ * remove anonymous unions from object structure
+ * 
+ * Revision 1.190  1995/02/02  02:59:40  yuan
+ * Working on exterminating bogus matcen_nums... (harmless though)
+ * 
+ * Revision 1.189  1995/02/01  16:29:51  yuan
+ * Stabilizing triggers and matcens.
+ * 
+ * Revision 1.188  1995/02/01  11:31:47  yuan
+ * Trigger bug fixed.
+ * 
+ * Revision 1.187  1994/11/27  23:17:24  matt
+ * Made changes for new mprintf calling convention
+ * 
+ * Revision 1.186  1994/11/17  14:48:12  mike
+ * validation functions moved from editor to game.
+ * 
+ * Revision 1.185  1994/10/30  14:13:17  mike
+ * rip out local segment stuff.
+ * 
+ * Revision 1.184  1994/10/27  10:04:24  matt
+ * When triangulating, don't use WID() to see if connected, look at children
+ * 
+ * Revision 1.183  1994/10/26  13:40:23  mike
+ * debug code for matt.
+ * 
+ * Revision 1.182  1994/10/24  16:34:00  mike
+ * Force render after mine compress to prevent bugs in segment selection via clicking in 3d window.
+ * 
+ * Revision 1.181  1994/10/20  18:16:15  mike
+ * Initialize ControlCenterTriggers.num_links in create_new_mine.
+ * 
+ * Revision 1.180  1994/10/18  16:29:14  mike
+ * Write function to automatically fix bogus segnums in segment array.
+ * 
+ * Revision 1.179  1994/10/08  17:10:41  matt
+ * Correctly set current_level_num when loading/creating mine in editor
+ * 
+ * Revision 1.178  1994/09/25  14:17:51  mike
+ * Initialize (to 0) Num_robot_centers and Num_open_doors at mine creation.
+ * 
+ * Revision 1.177  1994/09/20  14:36:06  mike
+ * Write function to find overlapping segments.
+ * 
+ * Revision 1.176  1994/08/25  21:55:57  mike
+ * IS_CHILD stuff.
+ * 
+ * Revision 1.175  1994/08/23  15:28:03  mike
+ * Fix peculiarity in med_combine_duplicate_vertices.
+ * 
+ * Revision 1.174  1994/08/09  16:06:17  john
+ * Added the ability to place players.  Made old
+ * Player variable be ConsoleObject.
+ * 
+ * Revision 1.173  1994/08/05  21:18:10  matt
+ * Allow two doors to be linked together
+ * 
+ * Revision 1.172  1994/08/04  19:13:16  matt
+ * Changed a bunch of vecmat calls to use multiple-function routines, and to
+ * allow the use of C macros for some functions
+ * 
+ * Revision 1.171  1994/07/22  12:37:00  matt
+ * Cleaned up editor/game interactions some more.
+ * 
+ * Revision 1.170  1994/07/22  11:20:08  mike
+ * Set Lsegments validity.
+ * 
+ * Revision 1.169  1994/07/21  19:02:49  mike
+ * lsegment stuff.
+ * 
+ * Revision 1.168  1994/07/21  13:27:17  matt
+ * Ripped out remants of old demo system, and added demo
+ * disables object movement and game options from menu.
+ * 
+ * Revision 1.167  1994/07/19  20:15:48  matt
+ * Name for each level now saved in the .SAV file & stored in Current_level_name
+ * 
+ * Revision 1.166  1994/07/06  12:42:45  john
+ * Made generic messages for hostages.
+ * 
+ * Revision 1.165  1994/06/24  17:04:29  john
+ * *** empty log message ***
+ * 
+ * Revision 1.164  1994/06/15  15:42:40  mike
+ * Initialize static_light field in new segments.
+ * 
+ * Revision 1.163  1994/06/13  17:49:19  mike
+ * Fix bug in med_validate_side which was toasting lighting for removable walls.
+ * 
+ * Revision 1.162  1994/06/13  10:52:20  mike
+ * Fix bug in triangulation of sides between connected segments.
+ * Was assigning SIDE_IS_02 regardless of how triangulated, was
+ * causing physics bugs.
+ * 
+ * Revision 1.161  1994/06/08  18:14:16  mike
+ * Fix triangulation of sides in hallways (ie, where there is no wall),
+ * so they get triangulated the same way, so find_new_seg doesn't get
+ * stuck in an infinite recursion.
+ * 
+ * Revision 1.160  1994/06/08  11:44:31  mike
+ * Fix bug in normals not being opposite on opposite sides of a segment.
+ * Problem occurred due to difference in handling of remainder in signed divide.
+ * 
+ * Revision 1.159  1994/05/31  19:00:15  yuan
+ * Fixed gamestate restore.
+ * 
+ * Revision 1.158  1994/05/30  20:22:36  yuan
+ * New triggers.
+ * 
+ * Revision 1.157  1994/05/26  19:32:51  mike
+ * Add bfs_parse.
+ * 
+ * Revision 1.156  1994/05/23  14:56:46  mike
+ * make current segment be add segment.,
 
 ------------------------------------------------------------------------
 main/editor/seguvs.h:
